# mu-mcp

./: .env.example  .gitignore  README.md  chat_handler.py  models.py  prompts.py  pyproject.toml  requirements.txt  server.py  setup.sh  storage.py
conf/: custom_models.json
docs/tools/: analyze.md  challenge.md  chat.md  codereview.md  consensus.md  debug.md  docgen.md  listmodels.md  planner.md  precommit.md  refactor.md  secaudit.md  testgen.md  thinkdeep.md  tracer.md  version.md
systemprompts/: analyze_prompt.py  chat_prompt.py  codereview_prompt.py  consensus_prompt.py  debug_prompt.py  docgen_prompt.py  planner_prompt.py  precommit_prompt.py  refactor_prompt.py  secaudit_prompt.py  testgen_prompt.py  thinkdeep_prompt.py  tracer_prompt.py
tools/: analyze.py  chat.py  codereview.py  docgen.py  models.py  precommit.py  refactor.py  testgen.py  tracer.py
tools/shared/: base_models.py  base_tool.py
tools/simple/: base.py
tools/workflow/: workflow_mixin.py
